--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html lang="en-US">
-  <head><meta charset="utf-8"><meta name="viewport" content="width=device-width"><title>Marko Starter</title>
+  <head><meta charset="utf-8"><meta name="viewport" content="width=device-width">
+    <title>Logiciel Co</title>
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
   </head>
