--- a/index.html
+++ b/index.html
@@ -28,25 +28,11 @@
     <div class="content">
       <section>
         <img class="hero" src="https://i.pinimg.com/originals/93/55/cf/9355cf9caa1d20c63b99c3375f59c3b4.jpg">
-        <h2>I am </h2> 
-        <h4>Failed entrepreneur, software developer.</h4>
+        <h1 class="headliner">We do everything right from a first attempt and there's no problem we can't solve*</h1>
         <p>
-        Being at the beginning of my career I used to work for a companies  
-        <a href="https://hp.com">Hewlett-Packard</a>, 
-        <a href="https://www.odysseylogistics.com/">Odyssey Logistics</a>,
-        <a href="https://www.jpmorganchase.com">JPMorgan Chase</a> delivering services in areas of 
-        <a href="https://en.wikipedia.org/wiki/Telecommunication">telecommunication</a> and
-        <a href="">computer</a> networks, 
-        <a href="https://en.wikipedia.org/wiki/Customer_relationship_management">CRM</a> &amp; 
-        <a href="https://en.wikipedia.org/wiki/Transportation_management_system">TMS</a> 
-        systems and computer infrastructure support. 
-        I’ve tried myself as a business owner and didn’t succeed so far.
-        More details can be found in 
-        <a href="paulsmal_cv.pdf">my resume</a>.
-        </p>
-        <p>
-        If you happened to look for team to backup your venture I know a <a href="contact.html">guy</a> 
-        or if willing to disrupt an industry let's <a href="contact.html">have a coffee</a> and a conversation about it. Dreaming is free.
+        Or maybe we just very bad entrepreneurs and like programming more than anything, if you happened to look
+        for a team we know a <a href="contact.html">guy</a> who can help you disrupt an industry. 
+        
         </p>
       </section>
       <!--section>
