text mod & 2 new pages

--- a/about.html
+++ b/about.html
@@ -25,12 +25,18 @@
     </header>
     <div class="content">
       <section>
-        <img class="hero" src="https://i.pinimg.com/originals/93/55/cf/9355cf9caa1d20c63b99c3375f59c3b4.jpg">
-        <h1 class="headliner">We do everything right from a first attempt and there's no problem we can't solve*</h1>
+        <h4>TECHNOLOGY</h4>
         <p>
-        Or maybe we just very bad entrepreneurs and like programming more than anything else, 
-        if you happened to look for a team we know a <a href="about.html">guys</a> who can help you disrupt an industry. 
+        Our team expertise is based on our interests and core members experience which is mostly lies in intersection of
+        soft real-time web applications and telecommunication networks.
+        
+        We would love to work with edge technologies, we used mostly <code>Go</code> and <code>Elixir</code>
+        </p>
+        <h4>DESIGN</h4>
+        <p>
+        We aim to make a <code>responsive design</code> with readability and user experience at first place.
         </p>
       </section>
+
     </div>
 </html>
