--- a/contact.html
+++ b/contact.html
@@ -25,11 +25,8 @@
     </header>
     <div class="content">
       <section>
-        <img class="hero" src="https://i.pinimg.com/originals/93/55/cf/9355cf9caa1d20c63b99c3375f59c3b4.jpg">
-        <h1 class="headliner">We do everything right from a first attempt and there's no problem we can't solve*</h1>
         <p>
-        Or maybe we just very bad entrepreneurs and like programming more than anything else, 
-        if you happened to look for a team we know a <a href="about.html">guys</a> who can help you disrupt an industry. 
+          You can expect a quick answer and consulations by sendign an email to me <a href="about.html">pavel.smal@gmail.com</a>
         </p>
       </section>
     </div>
