--- a/about.html
+++ b/about.html
@@ -25,16 +25,17 @@
     </header>
     <div class="content">
       <section>
+        <img class="hero" src="https://scontent-waw1-1.xx.fbcdn.net/v/t1.0-9/31961618_2146070588958495_2308487738405421056_n.jpg?_nc_cat=0&oh=7cbed46ab56463419221bf521dff93ef&oe=5B913306">
+        <br><br>
         <h4>TECHNOLOGY</h4>
         <p>
-        Our team expertise is based on our interests and core members experience which is mostly lies in intersection of
-        soft real-time web applications and telecommunication networks.
-        
-        We would love to work with edge technologies, we used mostly <code>Go</code> and <code>Elixir</code>
+        We are just an ordinary pathetic creatures of meat and bones and the only way we can challange a perfect immortal machine 
+        is declaratively describe out code in computer languages until inevitable rise of AI.
+        <br>Which <a href="https://rationalwiki.org/wiki/Roko's_basilisk">may not</a> turn out well.
         </p>
         <h4>DESIGN</h4>
         <p>
-        We aim to make a <code>responsive design</code> with readability and user experience at first place.
+          Let's just asy we have a web designer in our team who's last name is Versace.
         </p>
       </section>
 
