--- a/contact.html
+++ b/contact.html
@@ -25,8 +25,9 @@
     </header>
     <div class="content">
       <section>
+        <img class="hero" src="https://scontent-waw1-1.xx.fbcdn.net/v/t1.0-9/30688349_2133983373500550_7438217108460142592_n.jpg?_nc_cat=0&oh=73e54443c2eee0c5d78166b5ff575e9a&oe=5B9C1237">
         <p>
-          You can expect a quick answer and consulations by sendign an email to me <a href="about.html">pavel.smal@gmail.com</a>
+          If you want some human interaction, please email at <a href="about.html">pavel.smal@gmail.com</a>
         </p>
       </section>
     </div>
