--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
         </p>
         <h4>DESIGN</h4>
         <p>
-          Let's just asy we have a web designer in our team who's last name is Versace.
+          Let's just asy we have a web designer in our team who's last name is Givenchy.
         </p>
       </section>
 
