--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
       </div>
       <nav class="menu">
-        <a href="index.html">home</a>
+        <a href="/">home</a>
         <a href="about.html">about</a>
         <a href="contact.html">contact</a>
       </nav>
