--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
         <p>
         We are just an ordinary pathetic creatures of meat and bones and the only way we can challange a perfect immortal machine 
         is declaratively describe out code in computer languages until inevitable rise of AI.
-        <br>Which <a href="https://rationalwiki.org/wiki/Roko's_basilisk">may not</a> turn out well, but we still have time ti change it. 
+        Which <a href="https://rationalwiki.org/wiki/Roko's_basilisk">may not</a> turn out well, but we still have time ti change it. 
         </p>
         <h4>DESIGN</h4>
         <p>
