--- a/about.html
+++ b/about.html
@@ -31,10 +31,11 @@
         <p>
         We are just an ordinary pathetic creatures of meat and bones and the only way we can challange a perfect immortal machine 
         is declaratively describe out code in computer languages until inevitable rise of AI.
-        Which <a href="https://rationalwiki.org/wiki/Roko's_basilisk">may not</a> turn out well, but we still have time ti change it. 
+        Which <a href="https://rationalwiki.org/wiki/Roko's_basilisk">may not</a> turn out well, but we still have time to change it. 
         </p>
         <h4>DESIGN</h4>
         <p>
+          In order to create unconventional web experience 
           Let's just say we have a web designer in our team who's last name is Balenciaga.
         </p>
       </section>
