--- a/index.html
+++ b/index.html
@@ -1,36 +1,40 @@
 <html lang="en-US">
-  <head><meta charset="utf-8"><meta name="viewport" content="width=device-width">
-    <title>Logiciel Co</title>
-    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body cz-shortcut-listen="true">
-    <header>
-      <div class="d-flex justify-content-start align-items-center">
-        <div class="logo">
-          <h1 class="">
-            Logiciel
-          </h1>
-          <div class="line">
-            <div class="blue"></div>
-            <div class="pink"></div>
-          </div>
-        </div>
-      </div>
-      <nav class="menu">
-        <a href="/">home</a>
-        <a href="about.html">about</a>
-        <a href="contact.html">contact</a>
-      </nav>
-    </header>
-    <div class="content">
-      <section>
-        <img class="hero" src="https://i.pinimg.com/originals/93/55/cf/9355cf9caa1d20c63b99c3375f59c3b4.jpg">
-        <h1 class="headliner">We do everything right from a first attempt and there's no problem we can't solve*</h1>
-        <p>
-        Or maybe we just very bad entrepreneurs and like programming more than anything else.
-        If you happened to look for a team we know a <a href="about.html">guys</a> who can help you disrupt an industry. 
-        </p>
-      </section>
-    </div>
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width">
+		<link rel="shortcut icon" href="images/favicon.png">
+		<link rel="icon" href="images/favicon.png">
+		<title>Logiciel Co</title>
+		<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+		<link rel="stylesheet" href="style.css">
+	</head>
+	<body cz-shortcut-listen="true">
+		<header>
+			<div class="d-flex justify-content-start align-items-center">
+				<div class="logo">
+					<h1 class="">
+						Logiciel
+					</h1>
+					<div class="line">
+						<div class="blue"></div>
+						<div class="pink"></div>
+					</div>
+				</div>
+			</div>
+			<nav class="menu">
+				<a href="/">home</a>
+				<a href="about.html">about</a>
+				<a href="contact.html">contact</a>
+			</nav>
+		</header>
+		<div class="content">
+			<section>
+				<img class="hero" src="https://i.pinimg.com/originals/93/55/cf/9355cf9caa1d20c63b99c3375f59c3b4.jpg">
+				<h1 class="headliner">We do everything right from a first attempt and there's no problem we can't solve*</h1>
+				<p>
+				Or maybe we just very bad entrepreneurs and like programming more than anything else.
+				If you happened to look for a development team we know a <a href="about.html">guys</a> who can help you disrupt an industry. 
+				</p>
+			</section>
+		</div>
 </html>
