--- a/about.html
+++ b/about.html
@@ -35,8 +35,7 @@
         </p>
         <h4>DESIGN</h4>
         <p>
-          In order to create unconventional web experience 
-          Let's just say we have a web designer in our team who's last name is Balenciaga.
+          In order to create unconventional web experience for our UI we have a web designer in our team who's last name is Balenciaga.
         </p>
       </section>
 
