--- a/about.html
+++ b/about.html
@@ -35,7 +35,9 @@
         </p>
         <h4>DESIGN</h4>
         <p>
-          In order to create unconventional web experience for our UI we have a web designer in our team who's last name is Balenciaga.
+          In order to create unconventional web design experience we're getting an inspiration from 
+          <a href="http://brutalistwebsites.com">Brutalist</a> cutting edge design movement.
+          If you don't like it's always an easy option to use borring <a href="https://material.io/">Material Design</a>
         </p>
       </section>
 
