--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 				<h1 class="headliner">We do everything right from a first attempt and there's no problem we can't solve*</h1>
 				<p>
 				Or maybe we just very bad entrepreneurs and like programming more than anything else.
-				If you happened to look for a development team we know a <a href="about.html">guys</a> who can help you disrupt an industry. 
+        If you happened to look for a development team we know a <a href="about.html">guys</a> who can help you make 
+        <a href="https://vimeo.com/98720197">a world a better place</a>.
 				</p>
 			</section>
 		</div>
