--- a/about.html
+++ b/about.html
@@ -1,5 +1,9 @@
 <html lang="en-US">
-  <head><meta charset="utf-8"><meta name="viewport" content="width=device-width">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+		<link rel="shortcut icon" href="images/favicon.gif">
+		<link rel="icon" href="images/favicon.gif">
     <title>Logiciel Co</title>
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
