--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<img class="hero" src="https://i.pinimg.com/originals/93/55/cf/9355cf9caa1d20c63b99c3375f59c3b4.jpg">
 				<h1 class="headliner">We do everything right from a first attempt and there's no problem we can't solve*</h1>
 				<p>
-				Or maybe we just very bad entrepreneurs and like programming more than anything else.
+				Or maybe we're just a very bad entrepreneurs and like programming more than anything else.
         If you happened to look for a development team we know a <a href="about.html">guys</a> who can help you make 
         <a href="https://vimeo.com/98720197">a world a better place</a>.
 				</p>
