--- a/about.html
+++ b/about.html
@@ -1,5 +1,13 @@
 <html lang="en-US">
   <head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119063717-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-119063717-1');
+    </script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
 		<link rel="shortcut icon" href="images/favicon.gif">
