--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
         <p>
           In order to create unconventional web design experience we're getting an inspiration from 
           <a href="http://brutalistwebsites.com">Brutalist</a> cutting edge design movement.
-          If you don't like it's always an easy option to use boring <a href="https://material.io/">Material Design</a>
+          If you don't like it, there's always an option to use boring <a href="https://material.io/">Material Design</a>
         </p>
       </section>
 
