--- a/about.html
+++ b/about.html
@@ -51,6 +51,7 @@
           <a href="http://brutalistwebsites.com">Brutalist</a> cutting edge design movement.
           If you don't like it, there's always an option to use boring <a href="https://material.io/">Material Design</a>
         </p>
+        <a href="paulsmal_cv.pdf">Download CV</a>
       </section>
 
     </div>
