--- a/about.html
+++ b/about.html
@@ -10,8 +10,8 @@
     </script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-		<link rel="shortcut icon" href="images/favicon.gif">
-		<link rel="icon" href="images/favicon.gif">
+		<link rel="shortcut icon" href="images/favicon.png">
+		<link rel="icon" href="images/favicon.png">
     <title>Logiciel Co</title>
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -41,7 +41,7 @@
         <br><br>
         <h4>TECHNOLOGY</h4>
         <p>
-        We are just an ordinary pathetic creatures of meat and bones and the only way we can challange a perfect immortal machine 
+        We are just an ordinary carbon-based form of life creatures and the only way we can challange a perfect immortal machine 
         is declaratively describe out code in computer languages until inevitable rise of AI.
         Which <a href="https://rationalwiki.org/wiki/Roko's_basilisk">may not</a> turn out well, but we still have time to change it. 
         </p>
@@ -52,7 +52,8 @@
           If you don't like it, there's always an option to use boring <a href="https://material.io/">Material Design</a>
         </p>
         <h4>TEAM</h4>
-        <a href="paulsmal_cv.pdf">Download CV</a>
+        Paul <a href="paulsmal_cv.pdf">Download CV</a>
+        :wq
       </section>
 
     </div>
