--- a/contact.html
+++ b/contact.html
@@ -10,8 +10,8 @@
     </script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-		<link rel="shortcut icon" href="images/favicon.gif">
-		<link rel="icon" href="images/favicon.gif">
+		<link rel="shortcut icon" href="images/favicon.png">
+		<link rel="icon" href="images/favicon.png">
     <title>Logiciel Co</title>
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
