--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     </script>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width">
-		<link rel="shortcut icon" href="images/favicon.gif">
-		<link rel="icon" href="images/favicon.gif">
+		<link rel="shortcut icon" href="images/favicon.png">
+		<link rel="icon" href="images/favicon.png">
 		<title>Logiciel Co</title>
 		<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 		<link rel="stylesheet" href="style.css">
@@ -38,11 +38,10 @@
 		<div class="content">
 			<section>
 				<img class="hero" src="https://i.pinimg.com/originals/93/55/cf/9355cf9caa1d20c63b99c3375f59c3b4.jpg">
-				<h1 class="headliner">We do everything right from a first attempt and there's no problem we can't solve*</h1>
+				<h1 class="headliner">I do everything right from a first attempt and there's no problem I can't solve*</h1>
 				<p>
-				Or maybe we're just a very bad entrepreneurs and like programming more than anything else.
-        If you happened to look for a development team we know a <a href="about.html">guys</a> who can help you make 
-        <a href="https://vimeo.com/98720197">a world a better place</a>.
+        Will be the words of fists AI based development service, but until the rise of machines
+        <a href="about.html">our team</a> of ordinary creatures can help you <a href="https://vimeo.com/98720197">make a world a better place</a>.
 				</p>
 			</section>
 		</div>
