--- a/about.html
+++ b/about.html
@@ -41,9 +41,8 @@
         <br><br>
         <h4>TECHNOLOGY</h4>
         <p>
-        We are just an ordinary carbon-based form of life creatures and the only way we can challange a perfect immortal machine 
-        is declaratively describe out code in computer languages until inevitable rise of AI.
-        Which <a href="https://rationalwiki.org/wiki/Roko's_basilisk">may not</a> turn out well, but we still have time to change it. 
+        As a carbon-based form of life, the only way we can challange a perfect immortal machine is writing a code in 
+        computer languages.
         </p>
         <h4>DESIGN</h4>
         <p>
@@ -52,8 +51,7 @@
           If you don't like it, there's always an option to use boring <a href="https://material.io/">Material Design</a>
         </p>
         <h4>TEAM</h4>
-        Paul <a href="paulsmal_cv.pdf">Download CV</a>
-        :wq
+        me, Segmentation Fault & others
       </section>
 
     </div>
