--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
 				<img class="hero" src="https://i.pinimg.com/originals/93/55/cf/9355cf9caa1d20c63b99c3375f59c3b4.jpg">
 				<h1 class="headliner">I do everything right from a first attempt and there's no problem I can't solve*</h1>
 				<p>
-        Will be the words of fists AI based development service, but until the rise of machines
-        <a href="about.html">our team</a> of ordinary creatures can help you <a href="https://vimeo.com/98720197">make a world a better place</a>.
+        Will be the words of first AI based development services advertisement.
+        But until the rise of machines, which <a href="">may not</a> turn out well,
+        <a href="about.html">our team</a> of ordinary human creatures can help you <a href="https://vimeo.com/98720197">make a world a better place</a>.
 				</p>
 			</section>
 		</div>
