--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
         <br><br>
         <h4>TECHNOLOGY</h4>
         <p>
-        As a carbon-based form of life, the only way we can challange a perfect immortal machine is writing a code in 
+        As a carbon-based form of life, the only way we can challange a perfect immortal machines is writing a code in 
         computer languages.
         </p>
         <h4>DESIGN</h4>
