--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				<h1 class="headliner">I do everything right from a first attempt and there's no problem I can't solve*</h1>
 				<p>
         Will be the words of first AI based development services advertisement.
-        But until the rise of machines, which <a href="">may not</a> turn out well,
+        But until the rise of machines, which <a href="https://rationalwiki.org/wiki/Roko's_basilisk">may not</a> turn out well,
         <a href="about.html">our team</a> of ordinary human creatures can help you <a href="https://vimeo.com/98720197">make a world a better place</a>.
 				</p>
 			</section>
