--- a/about.html
+++ b/about.html
@@ -3,15 +3,15 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119063717-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
 
-      gtag('config', 'UA-119063717-1');
+gtag('config', 'UA-119063717-1');
     </script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-		<link rel="shortcut icon" href="images/favicon.png">
-		<link rel="icon" href="images/favicon.png">
+    <link rel="shortcut icon" href="images/favicon.png">
+    <link rel="icon" href="images/favicon.png">
     <title>Logiciel Co</title>
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -41,16 +41,15 @@
         <br><br>
         <h4>TECHNOLOGY</h4>
         <p>
-        As a carbon-based form of life, the only way we can challange a perfect immortal machines is writing a code in 
-        computer languages.
+        As a carbon-based form of life, the only way we can challenge a perfect immortal machines is by writing a logic in 
+        computer code and execute it in silicon-based integrated circuits.
         </p>
         <h4>DESIGN</h4>
         <p>
-          In order to create unconventional web design experience we're getting an inspiration from 
-          <a href="http://brutalistwebsites.com">Brutalist</a> cutting edge design movement.
-          If you don't like it, there's always an option to use boring <a href="https://material.io/">Material Design</a>
+        In order to create unconventional web design experience we're getting an inspiration from 
+        <a href="http://brutalistwebsites.com">Brutalist</a> cutting edge design movement.
+        If you don't like it, there's always an option to use boring <a href="https://material.io/">Material Design</a>
         </p>
       </section>
-
     </div>
 </html>
