--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 			<nav class="menu">
 				<a href="/">home</a>
 				<a href="about.html">about</a>
+        <a href="testimonials.html">testimonials</a>
 				<a href="contact.html">contact</a>
 			</nav>
 		</header>
