--- a/testimonials.html
+++ b/testimonials.html
@@ -44,7 +44,7 @@
         <p>
             You have no idea who you pissed off, I will ruin your business.
             <br>
-            - Mackrel Ackbar
+            - Mackrel Poisson
         </p>
         <p>
             Too much talking, they couldn't handle my billion dollar idea opportunity on their own.
