--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				<img class="hero" src="https://i.pinimg.com/originals/93/55/cf/9355cf9caa1d20c63b99c3375f59c3b4.jpg">
 				<h1 class="headliner">We do everything right from a first attempt and there's no problem we can't solve*</h1>
 				<p>
-        Will be the words of first AI based development services advertisement.
+        Could be a words of first AI based software development service advertisement.
         But until the rise of machines, which <a href="https://rationalwiki.org/wiki/Roko's_basilisk">may not</a> turn out well,
         <a href="about.html">our team</a> of ordinary human creatures can help you <a href="https://vimeo.com/98720197">make a world a better place</a>.
 				</p>
