--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
     </header>
     <div class="content">
       <section>
-        <img class="hero" src="https://scontent-waw1-1.xx.fbcdn.net/v/t1.0-9/31961618_2146070588958495_2308487738405421056_n.jpg?_nc_cat=0&oh=7cbed46ab56463419221bf521dff93ef&oe=5B913306">
+        <img class="hero" src="images/light.png">
         <br><br>
         <h4>TECHNOLOGY</h4>
         <p>
