--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
     </header>
     <div class="content">
       <section>
-        <img class="hero" src="https://scontent-waw1-1.xx.fbcdn.net/v/t1.0-9/30688349_2133983373500550_7438217108460142592_n.jpg?_nc_cat=0&oh=73e54443c2eee0c5d78166b5ff575e9a&oe=5B9C1237">
+        <img class="hero" src="images/rbm.gif">
         <p>
           If you want some human interaction, please email at <a href="about.html">pavel.smal@gmail.com</a>
         </p>
