--- a/index.html
+++ b/index.html
@@ -20,13 +20,7 @@
 		<header>
 			<div class="d-flex justify-content-start align-items-center">
 				<div class="logo">
-					<h1 class="">
-						Logiciel
-					</h1>
-					<div class="line">
-						<div class="blue"></div>
-						<div class="pink"></div>
-					</div>
+					<img src="images/logo.png" style="height: 40;">
 				</div>
 			</div>
 			<nav class="menu">
