--- a/testimonials.html
+++ b/testimonials.html
@@ -19,15 +19,9 @@
   <body cz-shortcut-listen="true">
     <header>
       <div class="d-flex justify-content-start align-items-center">
-        <div class="logo">
-          <h1 class="">
-            Logiciel
-          </h1>
-          <div class="line">
-            <div class="blue"></div>
-            <div class="pink"></div>
-          </div>
-        </div>
+	      <div class="logo">
+			    <img src="images/logo.png" style="height: 40;">
+		    </div>
       </div>
       <nav class="menu">
         <a href="/">home</a>
