--- a/contact.html
+++ b/contact.html
@@ -18,17 +18,11 @@
   </head>
   <body cz-shortcut-listen="true">
     <header>
-      <div class="d-flex justify-content-start align-items-center">
-        <div class="logo">
-          <h1 class="">
-            Logiciel
-          </h1>
-          <div class="line">
-            <div class="blue"></div>
-            <div class="pink"></div>
-          </div>
-        </div>
-      </div>
+	    <div class="d-flex justify-content-start align-items-center">
+		    <div class="logo">
+			    <img src="images/logo.png" style="height: 40;">
+		    </div>
+	    </div>
       <nav class="menu">
         <a href="/">home</a>
         <a href="about.html">about</a>
